--- a/Lets' study!.csproj
+++ b/Lets' study!.csproj
@@ -202,17 +202,32 @@
     <Compile Include="Forms\QuestionFrm.Designer.cs">
       <DependentUpon>QuestionFrm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\ScoreFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ScoreFrm.Designer.cs">
+      <DependentUpon>ScoreFrm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\SettingsForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\SettingsForm.Designer.cs">
       <DependentUpon>SettingsForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\UserFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\UserFrm.Designer.cs">
+      <DependentUpon>UserFrm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Interface\ITestHandler.cs" />
     <Compile Include="Services\ServiceRegistrator.cs" />
     <Compile Include="Services\TestHandler.cs" />
+    <Compile Include="Styles\RichTBEnglishStyle.cs" />
+    <Compile Include="Styles\RichTB\IRichTextBoxStyle.cs" />
+    <Compile Include="Styles\StylesRegistrator.cs" />
     <Compile Include="Tests\DaysOfWeek.cs" />
     <Compile Include="Tests\Interface\ITest.cs" />
     <Compile Include="Tests\TestsRegistrator.cs" />
@@ -222,8 +237,14 @@
     <EmbeddedResource Include="Forms\QuestionFrm.resx">
       <DependentUpon>QuestionFrm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ScoreFrm.resx">
+      <DependentUpon>ScoreFrm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\SettingsForm.resx">
       <DependentUpon>SettingsForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\UserFrm.resx">
+      <DependentUpon>UserFrm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
