--- a/Lets' study!.csproj
+++ b/Lets' study!.csproj
@@ -294,7 +294,9 @@
   <ItemGroup>
     <None Include="Resources\setting.ico" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\MainFormBack.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
