--- a/Lets' study!.csproj
+++ b/Lets' study!.csproj
@@ -235,6 +235,9 @@
     <Compile Include="Tests\DaysOfWeek.cs" />
     <Compile Include="Tests\Interface\ITest.cs" />
     <Compile Include="Tests\TestsRegistrator.cs" />
+    <Compile Include="User\Interface\IUser.cs" />
+    <Compile Include="User\User.cs" />
+    <Compile Include="User\UserRegistrator.cs" />
     <EmbeddedResource Include="Forms\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -300,6 +303,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\MainFormBack.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\student.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\results.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
